--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ build/
 .DS_Store
 SLES-rpiquick_color_en.pdf
 images/src/image008.gif
+adoc/TRD-rancher-trilio-aws-getting-started.adoc3
+adoc/TRD-rancher-trilio-aws-getting-started.adoc_backup1
+adoc/TRD-rancher-trilio-aws-getting-started.adoc_backup2
+adoc/TRD-rancher-trilio-aws-getting-started.adoc_backup1
+adoc/TRD-rancher-trilio-aws-getting-started.adoc_backup1
